Changelog

Kloxo 6.1.4 - 03-mar-2011
##################################
Bug #258: Kloxo install on a Citrix Xenserver Centos VM causes console to lock up with error
Bug #443: InstallApp download/install packages when InstallApp is disabled in GUI.
Bug #447: Switch Program fails (CGI died)
Bug #448: Error in /script/cleanup in version 6.1.3
Bug #450: Re-enable UDEV on Xen VPS (Was disabled in year 2008 by Lxlabs for a bug)
Bug #452: Add FTP User button results in a blank page
Security #435: Critical PHP security bug (disable_functions configuration in php.ini)

Moved to 6.1.5 (Not in time finished)
ToDo #421

Kloxo 6.1.3 - 14-feb-2011
##################################
Bug #367: Add support for IDN Domain
Bug #400: Cannot restore account in GUI or via Commandline API (Restore Failed. Reason: could_not_unzip_file)
Bug #413: Kloxo GUI php.ini: post_max_size should be the same as upload_max_filesize
Bug #416: Cannot delete domain with specific name
Bug #418: Kloxo Tree menu depth now limited
Bug #426: Spamdyke whitelist only valid for graylist
Bug #431: Roundcube config/db.inc.php with wrong password and fixwebmail not fixing it.
Feature #424: Extending Spamdyke features
Feature #436: Alternative smtp port with alternative or without SPAM control
Updates #437: New file creation fails after r297

Moved to 6.1.4 (Not in time finished)
ToDo #421


Kloxo 6.1.2 - 19-jan-2011
##################################
Bug #372: Traffic history: sorting of the month field does not work properly
Bug #379: Roundcube can't write logs
Bug #383: Adding client on plan with 0 database creates 1 database
Bug #390: suphp configuration and problems with the startup of httpd daemon
Bug #407: Traffic history: The delete button should be removed
ToDo #408: Remove: Add Lxlabs Authorized Key button

Kloxo 6.1.1 - 05-jan-2011
##################################
Bug #388: phpMyAdmin Configfile wrong persmission (thirdparty 2013)