@@ -42,19 +42,22 @@ Developers
 * George Hafiz			- george.hafiz@lxcenter.org
 * Steve Amerige			- steve.amerige@lxcenter.org
 * Daniel Onisoru		-
+* Rene Nieuwburg		- rene.nieuwburg@lxcenter.org
+* Sai Krishna			-
 
 Translators
 -----------
 * Angel Guzman Maeso 			- Kloxo ES
 * Marek Zakrzewski			- Kloxo PL
-* com2 (Forum name)			- HyperVM ES
-* Danny Terweij/Mike Buderath		- Kloxo/HyperVM NL
+* Rene Nieuwburg			- HyperVM ES
+* Danny Terweij				- Kloxo/HyperVM NL
 * George Hafiz				- en-gb corrector
 
 InstallApp software updater
 ---------------------------
 * lego (Forum name)
 * troylight (Forum Name)
+* Semir
 
 Others
 ------
